added rserver, combining..

--- a/trunk/web/evaluation.html
+++ b/trunk/web/evaluation.html
@@ -44,7 +44,7 @@
 </head>
 
 <body>
-	<h2>Map [current_map_id] at Generation [current_generation]</h2>	
+	<h2>Map <%= @current_map_id %> at Generation <%= @current_generation %></h2>	
 	<div id="header">
 		Please evaluate maps in scale of 0 to 100. <br />
 		0 means the map is completely incomprehensible, consisting of only irrelevant words.<br />
