server works, map should be ready

--- a/trunk/web/evaluation.html
+++ b/trunk/web/evaluation.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript">
 		function draw(evomapId)
 		{
-			displayTree('test.xml', evomapId, 600, 400);
+			displayTree('<%=@filepath%>', evomapId, 600, 400);
 		}
 
 		function validate(thisForm)
@@ -44,22 +44,22 @@
 </head>
 
 <body>
-	<h2>Map <%= @current_map_id %> at Generation <%= @current_generation %></h2>	
+	<h2>Map <%= @mapid %> at Generation <%= @generation %></h2>	
 	<div id="header">
 		Please evaluate maps in scale of 0 to 100. <br />
 		0 means the map is completely incomprehensible, consisting of only irrelevant words.<br />
 		100 means the map consists fully of relative words, suggesting useful knowledge or meanings.<br /><br />
 	</div>
 	
-	<form name="eval_form" action="" onsubmit="return validate(this)" method="POST">
+	<form name="eval_form" action="<%= @finishing ? 'main/finish' : 'main/evaluate'%>" onsubmit="return validate(this)" method="POST">
 
 	<div id="canvas" class="canvas">
 		<canvas id="evomap" class="evomap"></canvas>
 		<script type="text/javascript">draw('evomap');</script>
 		<br />
-		<input type="hidden" name="gen" value="[current_generation]" />
-		<input type="hidden" name="map_id" value="[current_map_id]" />
-		Your evaluation (0-100): <input id="eval" name="eval" type="text" size="4" value="0" />
+		<input type="hidden" name="gen" value="<%= @generation %>" />
+		<input type="hidden" name="map_id" value="<%= @mapid %>" />
+		Your evaluation (0-100): <input id="eval" name="prevscore" type="text" size="4" value="0" />
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<input type="submit" value="Submit Evaluation" /><br/>
 
@@ -71,12 +71,12 @@
 	
 	<div id="interactions">	
 	<h3>Interactions</h3>
-	* L-click the node: expand & collapse <br/>
+	* L-click the node: expand &amp; collapse <br/>
 	* L-click the empty space: dance!<br/>	
-	* L-click & drag the empty space: panning<br/>
+	* L-click &amp; drag the empty space: panning<br/>
 	* R-click the node: open URL<br/>
 	* R-click the empty space: zoom to fit <br/>
-	* R-click & drag the empty space: zoom<br/>
+	* R-click &amp; drag the empty space: zoom<br/>
 	* Drag node: move the node<br/>
 	</div>
 
