--- a/trunk/web/evaluation.html
+++ b/trunk/web/evaluation.html
@@ -60,7 +60,7 @@
 		<br />
 		<input type="hidden" name="gen" value="<%= @generation %>" />
 		<input type="hidden" name="map_id" value="<%= @mapid %>" />
-		Your evaluation (0-100): <input id="eval" name="prevscore" type="text" size="4" value="0" />
+		Your evaluation (0-100): <input id="eval" name="prevscore" type="text" size="4" value="<%= @test_score %>" />
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<input type="submit" value="Submit Evaluation" /><br/>
 
